--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'androidsvgdrawable'
 
+def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+repositories {
+    maven { url localMavenRepo }
+	flatDir { dirs '../../bitcoinj-blackcoinjPOS3/core/target' }
+
 dependencies {
     compile(project(':integration-android')) {
         exclude(group: 'com.google.android', module: 'android')
@@ -10,7 +15,7 @@ dependencies {
     compile 'com.android.support:support-v13:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'org.bitcoinj:bitcoinj-core:0.13.6'
+    compile 'org.bitcoinj:blackcoinj-core:0.13.5'
     compile 'com.google.protobuf:protobuf-java:2.5.0'
     compile 'com.google.guava:guava:16.0.1'
     compile 'com.google.zxing:core:3.2.1'
@@ -28,7 +33,7 @@ ext {
 }
 
 android {
-    compileSdkVersion 'android-21'
+    compileSdkVersion 'android-23'
     buildToolsVersion '23.0.2'
 
     lintOptions {
@@ -70,6 +75,7 @@ android {
         exclude 'org.bitcoin.production.checkpoints'
         exclude 'org.bitcoin.test.checkpoints'
     }
+}
 }
 
 task svgToPng(type: fr.avianey.androidsvgdrawable.gradle.SvgDrawableTask) {
